--- a/ParseNhlBoxscores/ParseNhlBoxscores.csproj
+++ b/ParseNhlBoxscores/ParseNhlBoxscores.csproj
@@ -32,6 +32,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework">
+      <HintPath>..\packages\EntityFramework.6.1.2\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer">
+      <HintPath>..\packages\EntityFramework.6.1.2\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="Fizzler">
       <HintPath>..\packages\Fizzler.1.0.0\lib\net35\Fizzler.dll</HintPath>
     </Reference>
@@ -45,6 +51,7 @@
       <HintPath>..\packages\Newtonsoft.Json.6.0.6\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -53,8 +60,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Game.cs" />
-    <Compile Include="PlayerGameLog.cs" />
+    <Compile Include="ParseEventSummary.cs" />
+    <Compile Include="ParseNhlBoxscoresHelpers.cs" />
+    <Compile Include="Models\ParseNhlBoxscoresDBInitializer.cs" />
+    <Compile Include="Models\Game.cs" />
+    <Compile Include="Models\ParseNhlBoxscoresContext.cs" />
+    <Compile Include="Models\PlayerGameLog.cs" />
+    <Compile Include="ParseSchedule.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
