--- a/ParseNhlBoxscores/ParseNhlBoxscores.csproj
+++ b/ParseNhlBoxscores/ParseNhlBoxscores.csproj
@@ -50,6 +50,9 @@
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\packages\Newtonsoft.Json.6.0.6\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="NLog">
+      <HintPath>..\packages\NLog.3.2.0.0\lib\net45\NLog.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -60,18 +63,28 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\Player.cs" />
+    <Compile Include="Models\Team.cs" />
     <Compile Include="ParseEventSummary.cs" />
     <Compile Include="ParseNhlBoxscoresHelpers.cs" />
     <Compile Include="Models\ParseNhlBoxscoresDBInitializer.cs" />
     <Compile Include="Models\Game.cs" />
     <Compile Include="Models\ParseNhlBoxscoresContext.cs" />
     <Compile Include="Models\PlayerGameLog.cs" />
+    <Compile Include="ParsePlayerStats.cs" />
     <Compile Include="ParseSchedule.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\TeamService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <Content Include="NLog.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <None Include="NLog.xsd">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
