--- a/ParseNhlBoxscores/packages.config
+++ b/ParseNhlBoxscores/packages.config
@@ -5,4 +5,7 @@
   <package id="Fizzler.Systems.HtmlAgilityPack" version="1.0.0" targetFramework="net45" />
   <package id="HtmlAgilityPack" version="1.4.6" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.6" targetFramework="net45" />
+  <package id="NLog" version="3.2.0.0" targetFramework="net45" />
+  <package id="NLog.Config" version="3.2.0.0" targetFramework="net45" />
+  <package id="NLog.Schema" version="3.2.0.0" targetFramework="net45" />
 </packages>
